Доработана возможность сохранения заказа. URL для интеграторов сервисов были перенесены в .yml

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 		<module>core-service</module>
 		<module>cart-service</module>
 		<module>api</module>
-	</modules>
+        <module>front</module>
+    </modules>
 
 	<groupId>ru.geekbrains.march.market</groupId>
 	<artifactId>parent-service</artifactId>
