- Добавлена регистрация - На фронт добавлен раздел "мои заказы" - Для каждого пользователя и гостя - своя корзина - При авторизации создается merge корзины гостя и данного пользователя - жалкие попытки добавить реддис

--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -8,4 +8,6 @@ integrations:
     read-timeout: 10000
     write-timeout: 5000
     connect-timeout: 5000
+cart-service:
+  cart-prefix: march_cart_
 
